--- a/theory-inquiry/week3/style.css
+++ b/theory-inquiry/week3/style.css
@@ -88,3 +88,11 @@ h3 {
         padding: 15px;
     }
 }
+
+.copyright {
+    text-align: center;
+    font-size:16px;
+    padding: 30px;
+    margin: 0px;
+    padding-bottom: 50px;
+}
