--- a/theory-inquiry/week3/style.css
+++ b/theory-inquiry/week3/style.css
@@ -14,6 +14,24 @@ h1 {
     color: #333;
 }
 
+h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 0px;
+    color: rgb(0, 0, 0);
+    background: linear-gradient(to right, rgb(255, 200, 215), rgb(225, 225, 255));
+    text-align: center; /* Centers text horizontally within the block */
+    font-size: 1.1em; /* Sets font size */
+    line-height: 1.6; /* Adjusts line spacing */
+    max-width: 150px; /* Limits the maximum width */
+    margin: 20px auto; /* Centers the block and adds vertical margins */
+    padding: 5px; /* Adds padding inside the block */
+    color: #000000; /* Sets text color to black */
+    border-radius: 0px; /* Removes rounded corners */
+    border: 3px solid black; /* Adds a 3px solid black border */
+}
+
 .name {
     text-align: center; /* Centers text horizontally within the block */
     font-size: 1.1em; /* Sets font size */
@@ -25,7 +43,14 @@ h1 {
     background-color: #f9f9f9; /* Light background color */
     border-radius: 0px; /* Removes rounded corners */
     border: 3px solid black; /* Adds a 1px solid black border */
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow */
+}
+
+.divider {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(to right, rgb(255, 164, 194), rgb(200, 200, 255)); /* Gradient from pink to light blue */
 }
 
 /* Style for subheadings */
